--- a/cad.html
+++ b/cad.html
@@ -25,5 +25,67 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
+  <!-- Top menu on small screens -->
+  <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
+    <span class="w3-left w3-padding">My Project Website</span>
+    <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
+  </header>
+
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-main" style="margin-left:300px">
+
+    <!-- Push down content on small screens -->
+    <div class="w3-hide-large" style="margin-top:83px"></div>
+    <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
+      <h4><b>CAD</b></h4>
+      <div class="w3-content w3-justify" style="max-width:600px">
+      <h4>What I learnt</h4>
+      <p>
+        I had not actually learnt much in this module as I already had prior experience on using Fusion 360.
+      </p>
+      <p>
+        In the first class we mainly focused on doing sketches in Fusion 360 and these are the 2 sketches that came out of the practice.
+      </p>
+      <p>
+        <img src="images/1.jpg" style="width:100%" alt="Sample">
+        <img src="images/1.jpg" style="width:100%" alt="Sample">
+      </p>
+      <p>
+        In the second lesson, we were taught how to make the sketches from 2D into 3D through the use of extrude, loft and shell. These are the 3 models that came out of the practice.
+      </p>
+      <p>
+        <img src="images/nametag.jpg" style="width:100%" alt="Sample">
+        <img src="images/lego.jpg" style="width:100%" alt="Sample">
+        <img src="images/boxes.jpg" style="width:100%" alt="Sample">
+      </p>
+      <hr class="w3-opacity">
+      </div>
+    </div>
+  </div>
+
+    <script>
+    // Script to open and close sidebar
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+      document.getElementById("myOverlay").style.display = "block";
+    }
+
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+      document.getElementById("myOverlay").style.display = "none";
+    }
+
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+
+    </script>
 </body>
 </html>
