--- a/tools.html
+++ b/tools.html
@@ -25,5 +25,104 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
+  <!-- Top menu on small screens -->
+  <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
+    <span class="w3-left w3-padding">My Project Website</span>
+    <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
+  </header>
+
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-main" style="margin-left:300px">
+
+    <!-- Push down content on small screens -->
+    <div class="w3-hide-large" style="margin-top:83px"></div>
+
+  <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
+      <h4><b>Tools</b></h4>
+      <div class="w3-content w3-justify" style="max-width:600px">
+        <h4>What I learnt</h4>
+        <p>
+        </p>
+        <p>This is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
+<table>
+  <thead>
+    <tr>
+      <th style="width:200px">Purpose</th>
+      <th style="width:150px">Choice</th>
+      <th style="width:200px">Reasons</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Text Editor</td>
+      <td>Atom</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>Graphics Editor</td>
+      <td>GIMP</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>Vector Editor</td>
+      <td>LibreCAD</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>Screen Capture</td>
+      <td>OBS</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <td>Image Resizer</td>
+      <td>tba</td>
+      <td>5</td>
+    </tr>
+    <tr>
+      <td>CAD system</td>
+      <td>Fusion 360</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>IDE</td>
+      <td>tba</td>
+      <td>7</td>
+    </tr>
+    <tr>
+      <td>Browser</td>
+      <td>Chrome</td>
+      <td>8</td>
+    </tr>
+  </tbody>
+  </table>
+</p>
+        <hr class="w3-opacity">
+      </div>
+    </div>
+  </div>
+    <script>
+    // Script to open and close sidebar
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+      document.getElementById("myOverlay").style.display = "block";
+    }
+
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+      document.getElementById("myOverlay").style.display = "none";
+    }
+
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+
+    </script>
 </body>
 </html>
