--- a/cad.html
+++ b/cad.html
@@ -50,16 +50,16 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         In the first class we mainly focused on doing sketches in Fusion 360 and these are the 2 sketches that came out of the practice.
       </p>
       <p>
-        <img src="images/s1.jpg" style="width:100%" alt="sketch1">
-        <img src="images/s2.jpg" style="width:100%" alt="sketch2">
+        <img src="images/1.jpg" style="width:100%" alt="Sample">
+        <img src="images/1.jpg" style="width:100%" alt="Sample">
       </p>
       <p>
         In the second lesson, we were taught how to make the sketches from 2D into 3D through the use of extrude, loft and shell. These are the 3 models that came out of the practice.
       </p>
       <p>
-        <img src="images/nametag.jpg" style="width:100%" alt="nametag">
-        <img src="images/lego.jpg" style="width:100%" alt="lego">
-        <img src="images/boxes.jpg" style="width:100%" alt="boxes">
+        <img src="images/nametag.jpg" style="width:100%" alt="Sample">
+        <img src="images/lego.jpg" style="width:100%" alt="Sample">
+        <img src="images/boxes.jpg" style="width:100%" alt="Sample">
       </p>
       <hr class="w3-opacity">
       </div>
