added ccc.html and edited other htmls for it

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <a href="tools.html"><img src="images/tools.jpg" style="width:100%" alt="Tools"> </a>
       <a href="css.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
-      <a href=""><img src="images/1.jpg" style="width:100%" alt="sample"> </a>
+      <a href="ccc.html"><img src="images/libre.jpg" style="width:100%" alt="CCC"> </a>
     </div>
 
     <div class="w3-third">
