--- a/cad.html
+++ b/cad.html
@@ -22,6 +22,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="css.html" onclick="w3_close()" class="w3-bar-item w3-button">CSS</a>
     <a href="github.html" onclick="w3_close()" class="w3-bar-item w3-button">GITHUB</a>
     <a href="cad.html" onclick="w3_close()" class="w3-bar-item w3-button">CAD</a>
+    <a href="ccc.html" onclick="w3_close()" class="w3-bar-item w3-button">Computer Controlled Cutting</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
