--- a/ccc.html
+++ b/ccc.html
@@ -41,7 +41,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>Documentation</b></h4>
+      <h4><b>Computer Controlled Cutting</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -50,7 +50,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
     </div>
   </div>
-
     <script>
     // Script to open and close sidebar
     function w3_open() {
