updated some sites

--- a/github.html
+++ b/github.html
@@ -44,8 +44,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Github</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <p>GitHub is a website and cloud-based service that allows developers to store and manage their code, as well as track changes to their code. It allows me to host public accessible static web-pages. From this class, the lecturer had taught us how to upload our site onto github and make it public.</p>
         <hr class="w3-opacity">
       </div>
     </div>
