--- a/tools.html
+++ b/tools.html
@@ -45,9 +45,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Tools</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
-        <p>
+        <p>There are a variety of tools needed for this elective that is essential to the making of my final project. Many of these are just software and a few tools provided in the FabLab.
         </p>
-        <p>This is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
+        <p>And this, this is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
 <table>
   <thead>
     <tr>
