--- a/tools.html
+++ b/tools.html
@@ -22,7 +22,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="css.html" onclick="w3_close()" class="w3-bar-item w3-button">CSS</a>
     <a href="github.html" onclick="w3_close()" class="w3-bar-item w3-button">GITHUB</a>
     <a href="cad.html" onclick="w3_close()" class="w3-bar-item w3-button">CAD</a>
-    <a href="ccc.html" onclick="w3_close()" class="w3-bar-item w3-button">Computer Controlled Cutting</a>
+    <a href="ccc.html" onclick="w3_close()" class="w3-bar-item w3-button">COMPUTER CONTROLLED CUTTING</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
@@ -47,7 +47,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h4>What I learnt</h4>
         <p>There are a variety of tools needed for this elective that is essential to the making of my final project. Many of these are just software and a few tools provided in the FabLab.
         </p>
-        <p>And this, this is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
+        <p>And thus, this is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
 <table>
   <thead>
     <tr>
