added some info into some of the sites

--- a/html.html
+++ b/html.html
@@ -44,7 +44,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>HTML</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
-        <p>I was taught how to use Atom to create a site using html.</p>
+        <p>I was taught how to use Atom to create a site using html. In the beginning, the lecturer taught us how to make simple website that had a simple white background and black word on it while making the using of the default starting line for the site and the headers and paragraph function. It produced a rudimentary website that was very simple.</p>
+        <p><img src="images/1.jpg" style="width:100%" alt="sample"></p>
+        <p>I eventually learnt how to add links and images into the site, which allow my site to look like this.</p>
+        <p><img src="images/1.jpg" style="width:100%" alt="sample"></p>
         <hr class="w3-opacity">
       </div>
     </div>
