--- a/safety.html
+++ b/safety.html
@@ -45,8 +45,27 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Safety</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <p>There are some safety rules a student must follow to enter the laboratory and workshops and they are as follows: <br>
+          1. Students are not allowed to enter and work in any laboratory or workshop in the absence of the lecturer-in-charge or Technical Supporting Officer (TSO).
+<br>2. Students must be properly attired according to the guidelines below :<br>
+a) Collared shirt or T-shirt and full-length trousers.<br>
+b) Do not wear loose-sleeved clothing and jewellery.<br>
+c) Do not use compressed air to clean your clothing.<br>
+d) Covered shoes must be worn at ALL time – NO open tops or open toes.<br>
+e) Students with long hair must tie up their hair to avoid entanglement with rotating machinery.<br>
+f) Certain laboratories and workshops required the use of additional safety equipment and Personal Protective Equipment (PPE) such as goggles, safety glasses, masks, gloves, ear plugs/earmuffs as instructed to protect against any workplace and machine hazards.<br>
+3. Know the location of all fire escape exits and assembly area.<br>
+4. Do not operate machines or equipment until you have been properly instructed by your lecturerin-charge or TSO.<br>
+5. Do not tamper with all safety devices and machine guards.<br>
+6. Report any UNSAFE conditions or UNSAFE acts to your lecturer-in-charge or TSO</p>
+<p>IN CASE OF EMERGENCIES:<br>
+1. Do not panic.<br>
+2. Quickly and calmly inform the lecturer-in-charge or TSO or follow the SP’s Three-step Emergency Procedure:<br>
+a) For ambulance or fire brigade, call 995<br>
+b) Instruct them to enter Gate 1 (Main Entrance) along Dover Road<br>
+c) Inform Campus Security by calling 6772-1234 for all emergencies and incident reporting.<br>
+3. Be familiar with the evacuation route and designated assembly area for the laboratory or workshop you are working in. These are posted on exit doors or at convenient location(s) within the laboratory or workshop.
+</p>
         <hr class="w3-opacity">
       </div>
     </div>
