--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="images/photo.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="images/photo.jpeg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>About Me</h4>
       <p>Hi, my name is Janesse Tiang. I am a student from Mechanical Engineering in Singapore Polytechnic and is taking the elective, Digital Fabrication & Prototyping.</p>
-      <p>mail: tiangjanesse@gmail.com</p>
+
       <hr class="w3-opacity">
 
     </div>
@@ -125,7 +125,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-third">
         <h3>FIND ME HERE</h3>
         <p>
-        tba
+          mail: tiangjanesse@gmail.com
         </p>
       </div>
     </div>
