--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- Photo grid -->
 
-  <div class="w3-row">
-    <h2 class="w3-center"><b>What I learnt</b></h2>
+  <div class="w3-row w3-bar-block w3-center">
+    <h2><a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">What I Learnt</a></h2>
     <div class="w3-third">
     <a href="safety.html" ><img src="images/safety.jpg" style="width:100%" alt="Safety" ></a>
     <a href="html.html" ><img src="images/html.jpg" style="width:100%" alt="HTML"> </a>
