--- a/tools.html
+++ b/tools.html
@@ -14,7 +14,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
+    <a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
     <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY</a>
     <a href="tools.html" onclick="w3_close()" class="w3-bar-item w3-button">TOOLS</a>
     <a href="doc.html" onclick="w3_close()" class="w3-bar-item w3-button">DOCUMENTATION</a>
