--- a/wil.html
+++ b/wil.html
@@ -41,29 +41,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>CAD</b></h4>
+      <h4><b>What I Learnt</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>What I learnt</h4>
-      <p>The lecturer taught us that there was two types of computer graphics, vector and raster. Raster images deals with pixels on the screen and is used for photographs and images while vector images uses mathematical functions and is characterized by clean lines. Raster images usually comes in .jpg and .png while vector images usually comes in .dxf and .svg.</p>
-      <p>The first task that was given to us was to create a raster image by removing the background of a selfie and replace it with a seaside scene. The result of it is this.</p>
-      <p><img src="images/1.jpg" style="width:100%" alt="sample"></p>
-      <p>The second task was to make a vector image of an animal by tracing the outline of the image to form the vector art. This is the result of it.</p>
-      <p><img src="images/1.jpg" style="width:100%" alt="sample"></p>
-      <p>The lecturer then went on to teach us how to use Fusion360. However, I had not actually learnt much in this module as I already had prior experience on using Fusion 360. </p>
-      <p>In the first class we mainly focused on doing sketches in Fusion 360 and these are the 2 sketches that came out of the practice.</p>
-      <p>
-        <img src="images/s1.jpg" style="width:100%" alt="sketch1">
-        <img src="images/s2.jpg" style="width:100%" alt="sketch2">
-      </p>
-      <p>
-        In the second lesson, we were taught how to make the sketches from 2D into 3D through the use of extrude, loft and shell. These are the 3 models that came out of the practice.
-      </p>
-      <p>
-        <img src="images/nametag.jpg" style="width:100%" alt="nametag">
-        <img src="images/lego.jpg" style="width:100%" alt="lego">
-        <img src="images/boxes.jpg" style="width:100%" alt="boxes">
-      </p>
-      <hr class="w3-opacity">
+        <p>Timeline</p>
+        <hr class="w3-opacity">
       </div>
     </div>
   </div>
