added images and edited some sites

--- a/wil.html
+++ b/wil.html
@@ -43,7 +43,37 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
       <h4><b>What I Learnt</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
-        <p>Timeline</p>
+        <p class="w3-center">Timeline</p>
+        <p><table>
+<thead>
+  <tr>
+    <th>Week 1</th>
+    <th>1</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>Week 2</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>Week 3</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>Week 4</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>Week 5</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>Week 6</td>
+    <td>6</td>
+  </tr>
+</tbody>
+</table></p>
         <hr class="w3-opacity">
       </div>
     </div>
