--- a/wil.html
+++ b/wil.html
@@ -44,11 +44,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>What I Learnt</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <p class="w3-center">Timeline</p>
-        <p><table>
+        <p>
+<table>
 <thead>
   <tr>
-    <th>Week 1</th>
-    <th>1</th>
+    <td>Week 1</td>
+    <td>1</td>
   </tr>
 </thead>
 <tbody>
