updated wil.html and removed doc.html

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h2><a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">What I Learnt</a></h2>
     <div class="w3-third">
     <a href="safety.html" ><img src="images/safety.jpg" style="width:100%" alt="Safety" ></a>
-    <a href="html.html" ><img src="images/html.jpg" style="width:100%" alt="HTML"> </a>
-    <a href="cad.html" ><img src="images/cad.jpg" style="width:100%" alt="CAD"> </a>
+    <a href="css.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
+    <a href="ccc.html"><img src="images/libre.jpg" style="width:100%" alt="CCC"> </a>
     </div>
 
     <div class="w3-third">
       <a href="tools.html"><img src="images/tools.jpg" style="width:100%" alt="Tools"> </a>
-      <a href="css.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
-      <a href="ccc.html"><img src="images/libre.jpg" style="width:100%" alt="CCC"> </a>
+      <a href="github.html"><img src="images/github.jpg" style="width:100%" alt="GitHub"> </a>
+      <a href=""><img src="images/1.jpg" style="width:100%" alt="sample"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="doc.html"><img src="images/documentation.jpg" style="width:100%" alt="Documentation"> </a>
-      <a href="github.html"><img src="images/github.jpg" style="width:100%" alt="GitHub"> </a>
+      <a href="html.html" ><img src="images/html.jpg" style="width:100%" alt="HTML"> </a>
+      <a href="cad.html" ><img src="images/cad.jpg" style="width:100%" alt="CAD"> </a>
       <a href=""><img src="images/1.jpg" style="width:100%" alt="sample"> </a>
     </div>
   </div>
