--- a/wil.html
+++ b/wil.html
@@ -17,7 +17,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
     <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY</a>
     <a href="tools.html" onclick="w3_close()" class="w3-bar-item w3-button">TOOLS</a>
-    <a href="doc.html" onclick="w3_close()" class="w3-bar-item w3-button">DOCUMENTATION</a>
     <a href="html.html" onclick="w3_close()" class="w3-bar-item w3-button">HTML</a>
     <a href="css.html" onclick="w3_close()" class="w3-bar-item w3-button">CSS</a>
     <a href="github.html" onclick="w3_close()" class="w3-bar-item w3-button">GITHUB</a>
@@ -45,33 +44,33 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify w3-center" style="max-width:600px">
         <p>Timeline</p>
         <p>
-<table>
+<table class="w3-center">
 <thead>
   <tr>
     <td>Week 1</td>
-    <td>1</td>
+    <td>Introduction, FabLab Safety and Tools</td>
   </tr>
 </thead>
 <tbody>
   <tr>
     <td>Week 2</td>
-    <td>2</td>
+    <td>HTML and CSS</td>
   </tr>
   <tr>
     <td>Week 3</td>
-    <td>3</td>
+    <td>Github</td>
   </tr>
   <tr>
     <td>Week 4</td>
-    <td>4</td>
+    <td>Computer Graphics</td>
   </tr>
   <tr>
     <td>Week 5</td>
-    <td>5</td>
+    <td>Computer Aided Design</td>
   </tr>
   <tr>
     <td>Week 6</td>
-    <td>6</td>
+    <td>Computer Controlled Cutting</td>
   </tr>
 </tbody>
 </table></p>
