--- a/wil.html
+++ b/wil.html
@@ -45,13 +45,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>Timeline</p>
         <p>
 <table class="w3-center">
-<thead>
-  <tr>
-    <td>Week 1</td>
-    <td>Introduction, FabLab Safety and Tools</td>
-  </tr>
-</thead>
 <tbody>
+  <tr>
+    <td style="width:200px">Week 1</td>
+    <td style="width:200px">Introduction, FabLab Safety and Tools</td>
+  </tr>
   <tr>
     <td>Week 2</td>
     <td>HTML and CSS</td>
