--- a/wil.html
+++ b/wil.html
@@ -44,7 +44,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify w3-center" style="max-width:600px">
         <p>Timeline</p>
         <p>
-<table class="w3-center">
+<table >
 <tbody>
   <tr>
     <td style="width:200px">Week 1</td>
