--- a/cad.html
+++ b/cad.html
@@ -62,6 +62,15 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <img src="images/lego.jpg" style="width:100%" alt="lego">
         <img src="images/boxes.jpg" style="width:100%" alt="boxes">
       </p>
+      <p>In the third lesson, we were taught the revolve and sculpting function and these are the 2 models that came out the practice.</p>
+      <p>
+        <img src="images/cup.jpg" style="width:100%" alt="cup">
+        <img src="images/hexnut.jpg" style="width:100%" alt="hexnut">
+      </p>
+      <p>In this lesson was also where we were assign to make a chesspiece in Fusion360. We were instructed to go online to find an image of a knight chesspiece and trace over it in Fusion360 by inserting the image into the sketch. This is the result of the assignment.</p>
+      <p>
+      <iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968532a63f44f178e70?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+      </p>
       <hr class="w3-opacity">
       </div>
     </div>
