--- a/wil.html
+++ b/wil.html
@@ -41,8 +41,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
       <h4><b>What I Learnt</b></h4>
-      <div class="w3-content w3-justify w3-center" style="max-width:600px">
-        <p>Timeline</p>
+      <div class="w3-content w3-justify" style="max-width:600px">
+        <p class="w3-center">Timeline</p>
         <p>
 <table >
 <tbody>
