--- a/wil.html
+++ b/wil.html
@@ -43,7 +43,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>What I Learnt</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <p class="w3-center">Timeline</p>
-        <p>
+        <p class="w3-left">
 <table >
 <tbody>
   <tr>
