--- a/wil.html
+++ b/wil.html
@@ -47,27 +47,27 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <table >
 <tbody>
   <tr>
-    <td style="width:200px">Week 1</td>
+    <td style="width:200px" class="w3-center" >Week 1</td>
     <td style="width:400px">Introduction, FabLab Safety and Tools</td>
   </tr>
   <tr>
-    <td>Week 2</td>
+    <td class="w3-center">Week 2</td>
     <td>HTML and CSS</td>
   </tr>
   <tr>
-    <td>Week 3</td>
+    <td class="w3-center">Week 3</td>
     <td>Github</td>
   </tr>
   <tr>
-    <td>Week 4</td>
+    <td class="w3-center">Week 4</td>
     <td>Computer Graphics</td>
   </tr>
   <tr>
-    <td>Week 5</td>
+    <td class="w3-center">Week 5</td>
     <td>Computer Aided Design</td>
   </tr>
   <tr>
-    <td>Week 6</td>
+    <td class="w3-center">Week 6</td>
     <td>Computer Controlled Cutting</td>
   </tr>
 </tbody>
