--- a/arduino.html
+++ b/arduino.html
@@ -15,13 +15,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
     <a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
-    <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY</a>
-    <a href="tools.html" onclick="w3_close()" class="w3-bar-item w3-button">TOOLS</a>
+    <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY & TOOLS</a>
     <a href="html.html" onclick="w3_close()" class="w3-bar-item w3-button">HTML</a>
     <a href="css.html" onclick="w3_close()" class="w3-bar-item w3-button">CSS</a>
     <a href="github.html" onclick="w3_close()" class="w3-bar-item w3-button">GITHUB</a>
     <a href="cad.html" onclick="w3_close()" class="w3-bar-item w3-button">CAD</a>
-    <a href="ccc.html" onclick="w3_close()" class="w3-bar-item w3-button">COMPUTER CONTROLLED CUTTING</a>
+    <a href="arduino.html" onclick="w3_close()" class="w3-bar-item w3-button">ARDUINO</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
@@ -40,7 +39,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>Computer Controlled Cutting</b></h4>
+      <h4><b>Arduino</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
         <p></p>
