--- a/index.html
+++ b/index.html
@@ -43,36 +43,34 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-row w3-bar-block w3-center">
     <h2><a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">What I Learnt</a></h2>
     <div class="w3-third">
-    <a href="safety.html" ><img src="images/safety.jpg" style="width:100%" alt="Safety" ></a>
-    <a href="css.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
-    <a href="ccc.html"><img src="images/libre.jpg" style="width:100%" alt="CCC"> </a>
+    <a href="safety.html" ><img src="images/safety.jpg" style="width:100%" alt="Safety&Tools" ></a>
+    <a href="css.html"><img src="images/css.jpg" style="width:100%" alt="GitHub"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="tools.html"><img src="images/tools.jpg" style="width:100%" alt="Tools"> </a>
-      <a href="github.html"><img src="images/github.jpg" style="width:100%" alt="GitHub"> </a>
-      <a href=""><img src="images/1.jpg" style="width:100%" alt="sample"> </a>
+      <a href="tools.html"><img src="images/tools.jpg" style="width:100%" alt="HTML"> </a>
+      <a href="github.html"><img src="images/github.jpg" style="width:100%" alt="CAD"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="html.html" ><img src="images/html.jpg" style="width:100%" alt="HTML"> </a>
-      <a href="cad.html" ><img src="images/cad.jpg" style="width:100%" alt="CAD"> </a>
-      <a href=""><img src="images/1.jpg" style="width:100%" alt="sample"> </a>
+      <a href="html.html" ><img src="images/html.jpg" style="width:100%" alt="CSS"> </a>
+      <a href="arduino.html" ><img src="images/cad.jpg" style="width:100%" alt="Arduino"> </a>
     </div>
   </div>
 
   <div class="w3-row" id="project">
-    <h2 class="w3-center"><b>My Projects</b></h2>
+    <h2 class="w3-center"><b>My Final Projects</b></h2>
+    <h3>What I did</h3>
     <div class="w3-third">
-    <a href="1.html" ><img src="images/1.jpg" style="width:100%" alt="project1"> </a>
+    <a href="1.html" ><img src="images/1.jpg" style="width:100%" alt="3D Printing"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="2.html"><img src="images/1.jpg" style="width:100%" alt="project2"> </a>
+      <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Lazer Cutting"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="3.html"><img src="images/1.jpg" style="width:100%" alt="project3"> </a>
+      <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Coding"> </a>
     </div>
     <hr class="w3-opacity">
   </div>
