--- a/safety.html
+++ b/safety.html
@@ -15,13 +15,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
     <a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
-    <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY</a>
-    <a href="tools.html" onclick="w3_close()" class="w3-bar-item w3-button">TOOLS</a>
+    <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY & TOOLS</a>
     <a href="html.html" onclick="w3_close()" class="w3-bar-item w3-button">HTML</a>
     <a href="css.html" onclick="w3_close()" class="w3-bar-item w3-button">CSS</a>
     <a href="github.html" onclick="w3_close()" class="w3-bar-item w3-button">GITHUB</a>
     <a href="cad.html" onclick="w3_close()" class="w3-bar-item w3-button">CAD</a>
-    <a href="ccc.html" onclick="w3_close()" class="w3-bar-item w3-button">COMPUTER CONTROLLED CUTTING</a>
+    <a href="arduino.html" onclick="w3_close()" class="w3-bar-item w3-button">ARDUINO</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
@@ -41,9 +40,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-hide-large" style="margin-top:83px"></div>
 
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>Safety</b></h4>
+      <h4><b>Safety & Tools</b></h4>
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>What I learnt</h4>
+        <h5>Safety</h5>
         <p>There are some safety rules a student must follow to enter the laboratory and workshops and they are as follows:</p>
         <p> 1. Students are not allowed to enter and work in any laboratory or workshop in the absence of the lecturer-in-charge or Technical Supporting Officer (TSO).<br>
           2. Students must be properly attired according to the guidelines below :<br>
@@ -66,6 +66,62 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           c) Inform Campus Security by calling 6772-1234 for all emergencies and incident reporting.<br>
           3. Be familiar with the evacuation route and designated assembly area for the laboratory or workshop you are working in. These are posted on exit doors or at convenient location(s) within the laboratory or workshop.
           </p>
+          <h5>Tools</h5>
+          <p>There are a variety of tools needed for this elective that is essential to the making of my final project. Many of these are just software and a few tools provided in the FabLab.
+          </p>
+          <p>And thus, this is the table of what tools I have decided on using for this module and why I have decided to use them:<br>
+  <table>
+    <thead>
+      <tr>
+        <th style="width:200px">Purpose</th>
+        <th style="width:150px">Choice</th>
+        <th style="width:200px">Reasons</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Text Editor</td>
+        <td>Atom</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>Graphics Editor</td>
+        <td>GIMP</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>Vector Editor</td>
+        <td>LibreCAD</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>Screen Capture</td>
+        <td>OBS</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>Image Resizer</td>
+        <td>tba</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>CAD system</td>
+        <td>Fusion 360</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>IDE</td>
+        <td>tba</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>Browser</td>
+        <td>Chrome</td>
+        <td>8</td>
+      </tr>
+    </tbody>
+    </table>
+  </p>
         <hr class="w3-opacity">
       </div>
     </div>
