--- a/wil.html
+++ b/wil.html
@@ -15,13 +15,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
     <a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
-    <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY</a>
-    <a href="tools.html" onclick="w3_close()" class="w3-bar-item w3-button">TOOLS</a>
+    <a href="safety.html" onclick="w3_close()" class="w3-bar-item w3-button">SAFETY & TOOLS</a>
     <a href="html.html" onclick="w3_close()" class="w3-bar-item w3-button">HTML</a>
     <a href="css.html" onclick="w3_close()" class="w3-bar-item w3-button">CSS</a>
     <a href="github.html" onclick="w3_close()" class="w3-bar-item w3-button">GITHUB</a>
     <a href="cad.html" onclick="w3_close()" class="w3-bar-item w3-button">CAD</a>
-    <a href="ccc.html" onclick="w3_close()" class="w3-bar-item w3-button">COMPUTER CONTROLLED CUTTING</a>
+    <a href="arduino.html" onclick="w3_close()" class="w3-bar-item w3-button">ARDUINO</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
