edited sites, updated cad,html, arduino,html and index.html

--- a/arduino.html
+++ b/arduino.html
@@ -40,9 +40,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
       <h4><b>Arduino</b></h4>
-      <div class="w3-content w3-justify" style="max-width:600px">
+      <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I learnt</h4>
-        <p></p>
+        <p>In this class, we learnt about Arduino and TinkerCAD. TinkerCAD is a website where we can simulate our project and code. Although I had prior experience with Arduino, I had not had the same experince with TinkerCAD as this was my first time using it so I had learnt a lot from these lessons. The lecturer taught us how to use TinkerCAD and surprisingly, it was very easy to use. Thus, we beagan experimenting with it. We were first taught to make a simple code that causes an LED to flash on and off, which was relatively easy. Then, we were taught to make slightly harder coing by making a 555 astable timer which is shown below.</p>
+        <p><iframe width="640" height="480" src="https://www.tinkercad.com/embed/cFU4M1AoCNz" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
+        <p>In the next lesson, we were taught more on how to code in which we were assigned the task of making a countdown timer in TinkerCAD. Initially, I had trouble making the circuit start working. After asking the lecturer on why it wasn.t working, I found out that I had the wrong setting for the display where I had it on anode instead of cathode. After that, coding it was relatively simple. The circuit is shown below</p>
+        <p><iframe width="640" height="480" src="https://www.tinkercad.com/embed/3aLpghUeJWM" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
+        <p>In the lesson after that, we learnt how to code in the input of a button, where we could turn the LED on and off manually. We were taught how to troubleshoot the code making the use of the serial library. We were then given the task of coding 3 different LEDs to go from red to green to white in that order using a button to toggle between the colours. The completed assignment is shown below.</p>
+        <p><iframe width="640" height="480" src="https://www.tinkercad.com/embed/4l3aSTXlCoN" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
         <hr class="w3-opacity">
       </div>
     </div>
