--- a/cad.html
+++ b/cad.html
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
       <h4><b>CAD</b></h4>
-      <div class="w3-content w3-justify" style="max-width:600px">
+      <div class="w3-content w3-justify" style="max-width:640px">
       <h4>What I learnt</h4>
       <p>The lecturer taught us that there was two types of computer graphics, vector and raster. Raster images deals with pixels on the screen and is used for photographs and images while vector images uses mathematical functions and is characterized by clean lines. Raster images usually comes in .jpg and .png while vector images usually comes in .dxf and .svg.</p>
       <p>The first task that was given to us was to create a raster image by removing the background of a selfie and replace it with a seaside scene. The result of it is this.</p>
@@ -66,10 +66,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <img src="images/cup.jpg" style="width:100%" alt="cup">
         <img src="images/hexnut.jpg" style="width:100%" alt="hexnut">
       </p>
-      <p>In this lesson was also where we were assign to make a chesspiece in Fusion360. We were instructed to go online to find an image of a knight chesspiece and trace over it in Fusion360 by inserting the image into the sketch. This is the result of the assignment.</p>
+      <p>In this lesson was also where we were assigned to make a chesspiece in Fusion360. We were instructed to go online to find an image of a knight chesspiece and trace over it in Fusion360 by inserting the image into the sketch. This is the result of the assignment.</p>
       <p>
       <iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968532a63f44f178e70?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
       </p>
+      <p>Finally, we moved on to learning about Computer Controlled Cutting. This was where we learnt how to make a .dxf file used for laser cutting. In the class, we were also assigned to make a laptop stand and a music box, these are the results.</p>
+      <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd9682b293f7c9ffc26e4?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
+      <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd96860ff5a0508b9e2d8?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
       <hr class="w3-opacity">
       </div>
     </div>
