--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
   <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
   <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
-  <a href="#project" onclick="w3_close()" class="w3-bar-item w3-button">MY PROJECTS</a>
-  <a href="#final" onclick="w3_close()" class="w3-bar-item w3-button">FINAL PROJECT</a>
+  <a href="#project" onclick="w3_close()" class="w3-bar-item w3-button">MY FINAL PROJECT</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
   &nbsp;
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
@@ -72,17 +71,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="Coding"> </a>
     </div>
-    <hr class="w3-opacity">
-  </div>
-
-  <div class="w3-container w3-light-grey w3-center w3-text-black w3-padding-32" id="final">
-    <h4><b>My Final Project</b></h4>
-    <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>Final Project Info</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <hr class="w3-opacity">
+    <div class="w3-row w3-bar-block w3-center">
+    <h2><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">The Process</a></h2>
     </div>
+    <hr class="w3-opacity">
   </div>
 
   <!-- About section -->
