--- a/wil.html
+++ b/wil.html
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
       <h4><b>What I Learnt</b></h4>
-      <div class="w3-content w3-justify" style="max-width:600px">
+      <div class="w3-content w3-justify" style="max-width:640px">
         <p class="w3-center">Timeline</p>
         <p class="w3-left">
 <table >
@@ -68,6 +68,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <tr>
     <td class="w3-center">Week 6</td>
     <td>Computer Controlled Cutting</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 7</td>
+    <td>Arduino</td>
   </tr>
 </tbody>
 </table></p>
