--- a/index.html
+++ b/index.html
@@ -102,12 +102,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h3>ELECTIVE LINKS</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
-            <a href="https://rdorville.github.io/EP1000/"><img src="images/dot.png" class="w3-left w3-margin-right" style="width:50px"></a>
-            <span class="w3-large">Main elective website</span>
+            <a href="https://rdorville.github.io/EP1000/" onclick="w3_close()" class="w3-bar-item w3-button">Main elective website</a>
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <a href="https://rdorville.github.io/digfab/"><img src="images/dot.png" class="w3-left w3-margin-right" style="width:50px"></a>
-            <span class="w3-large">Lecturer's website</span>
+            <a href="https://rdorville.github.io/digfab/" onclick="w3_close()" class="w3-bar-item w3-button">Lecturer's website</a>
           </li>
         </ul>
       </div>
