added 1.html and 2.html and edited cad.html

--- a/cad.html
+++ b/cad.html
@@ -66,13 +66,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <img src="images/cup.jpg" style="width:100%" alt="cup">
         <img src="images/hexnut.jpg" style="width:100%" alt="hexnut">
       </p>
-      <p>In this lesson was also where we were assigned to make a chesspiece in Fusion360. We were instructed to go online to find an image of a knight chesspiece and trace over it in Fusion360 by inserting the image into the sketch. This is the result of the assignment.</p>
+      <p>In this lesson was also where we were assigned to make a chesspiece in Fusion360. We were instructed to go online to find an image of a knight chesspiece and trace over it in Fusion360 by inserting the image into the sketch. Later on, this would be 3D printed as part of a project. The link to the process is <a href="1.html">here</a>. However, this is the result of the assignment.</p>
       <p>
       <iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968532a63f44f178e70?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
       </p>
       <p>Finally, we moved on to learning about Computer Controlled Cutting. This was where we learnt how to make a .dxf file used for laser cutting. In the class, we were also assigned to make a laptop stand and a music box, these are the results.</p>
       <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd9682b293f7c9ffc26e4?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
       <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd96860ff5a0508b9e2d8?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
+      <p>The box shown above will be lazer cutted later on and the link to the process is <a href="2.html">here</a>.</p>
       <hr class="w3-opacity">
       </div>
     </div>
