--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
   <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
   <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I LEARNT</a>
+  <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I DID</a>
   <a href="#project" onclick="w3_close()" class="w3-bar-item w3-button">MY FINAL PROJECT</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
   &nbsp;
@@ -43,23 +44,33 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h2><a href="wil.html" onclick="w3_close()" class="w3-bar-item w3-button">What I Learnt</a></h2>
     <div class="w3-third">
     <a href="safety.html"><img src="images/safety.jpg" style="width:100%" alt="Safety&Tools" ></a>
-    <a href="css.html"><img src="images/github.jpg" style="width:100%" alt="GitHub"> </a>
+    <a href="github.html"><img src="images/github.jpg" style="width:100%" alt="GitHub"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="tools.html"><img src="images/html.jpg" style="width:100%" alt="HTML"> </a>
-      <a href="github.html"><img src="images/cad.jpg" style="width:100%" alt="CAD"> </a>
+      <a href="html.html"><img src="images/html.jpg" style="width:100%" alt="HTML"> </a>
+      <a href="cad.html"><img src="images/cad.jpg" style="width:100%" alt="CAD"> </a>
     </div>
 
     <div class="w3-third">
-      <a href="html.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
+      <a href="css.html"><img src="images/css.jpg" style="width:100%" alt="CSS"> </a>
       <a href="arduino.html"><img src="images/arduino.jpg" style="width:100%" alt="Arduino"> </a>
     </div>
   </div>
 <p></p>
+  <div class="w3-row w3-bar-block w3-center" id="projects">
+    <h2 class="w3-bar-item w3-row w3-center">What I Did</h2>
+    <div class="w3-half">
+    <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="3D printing" ></a>
+    </div>
+    <div class="w3-half">
+    <a href="2.html"><img src="images/1.jpg" style="width:100%" alt="lazer cutting" ></a>
+    </div>
+  </div>
+<p></p>
 
-  <div class="w3-row" id="project">
-    <h1 class="w3-center w3-grey w3-padding-16"><b>My Final Project</b></h1>
+  <div class="w3-row w3-grey" id="project">
+    <h2 class="w3-center w3-padding-16"><b>My Final Project</b></h2>
     <p class="w3-center"><img src="images/1.jpg" style="width:950px" alt="final project"></p>
     <div class="w3-row w3-bar-block w3-center">
       <h1><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center">What I did</a></h1>
@@ -75,8 +86,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-row w3-bar-block w3-center">
       <h2><a href="code.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>CODING</b></a></h2>
     </div>
+    <p></p>
   </div>
-  <p></p>
 
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
