added 3.html and updated index.html and arduino.html

--- a/arduino.html
+++ b/arduino.html
@@ -48,6 +48,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p><iframe width="640" height="480" src="https://www.tinkercad.com/embed/3aLpghUeJWM" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
         <p>In the lesson after that, we learnt how to code in the input of a button, where we could turn the LED on and off manually. We were taught how to troubleshoot the code making the use of the serial library. We were then given the task of coding 3 different LEDs to go from red to green to white in that order using a button to toggle between the colours. The completed assignment is shown below.</p>
         <p><iframe width="640" height="480" src="https://www.tinkercad.com/embed/4l3aSTXlCoN" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe></p>
+        <p>This assignment is later made in class after we finished the 3D Printing and Lazer Cutting projects and the progress is shown <a href="3.html">here</a>. </p>
+        <p>After we finished the 3D Printing and Lazer Cutting projects, we then went on into making the Assignment 12 above and learning about sensors. We were handed temperature and ultrasonic distance sensors and were taught to use it. I first took the ultrasonic sensor and instead of just using the code given, I had integrated it into Assignment 12, where instead of the LED going from red to green to white, it went from red to green to red and green and white only lights up if there is something around 10 to 30cm in front of the ultrasonic sensor.</p>
+        <p></p>
         <hr class="w3-opacity">
       </div>
     </div>
