--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <p></p>
   <div class="w3-row w3-bar-block w3-center" id="projects">
     <h2 class="w3-bar-item w3-row w3-center">What I Did</h2>
-    <div class="w3-half">
+    <div class="w3-third">
     <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="3D printing" ></a>
     </div>
-    <div class="w3-half">
+    <div class="w3-third">
     <a href="2.html"><img src="images/1.jpg" style="width:100%" alt="lazer cutting" ></a>
+    </div>
+    <div class="w3-third">
+    <a href="3.html"><img src="images/1.jpg" style="width:100%" alt="Arduino" ></a>
     </div>
   </div>
 <p></p>
