updated the site in general

--- a/3.html
+++ b/3.html
@@ -38,6 +38,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Arduino</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
+        <p>In these lessons, I first implemented Assignment 12 which I had already made in TinkerCAD and is shown below.</p>
+        <p></p>
+        <p>Then in the next lesson, I was handed an ultrasonic distance sensor. However, I did not take a video of the result and thus only the coding is showed here.</p>
+        <p></p>
+        <p>After that, I implemented the same circuit but with an LM34 instead of an ultrasonic distance sensor. Both the video of it and the coding is shown below.</p>
+        <p></p>
+        <p></p>
       </div>
     </div>
   </div>
