--- a/wil.html
+++ b/wil.html
@@ -71,7 +71,39 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </tr>
   <tr>
     <td class="w3-center">Week 7</td>
-    <td>Arduino</td>
+    <td>Arduino with TinkerCAD</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 11</td>
+    <td>Using the Lazer Cutter</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 12</td>
+    <td>Using the 3D Printer</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 13</td>
+    <td>Arduino using Uno</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 14</td>
+    <td>Arduino using Ultrasonic Distance Sensor and LM34</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 15</td>
+    <td>Arduino using Keypad</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 16</td>
+    <td>Planning the Project</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 17</td>
+    <td>Coding, 3D Printing and Lazer Cutting the Project</td>
+  </tr>
+  <tr>
+    <td class="w3-center">Week 18</td>
+    <td>Finishing up and presenting the Project</td>
   </tr>
 </tbody>
 </table></p>
