--- a/1.html
+++ b/1.html
@@ -16,6 +16,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
     <a href="1.html" onclick="w3_close()" class="w3-bar-item w3-button">3D PRINTING</a>
     <a href="2.html" onclick="w3_close()" class="w3-bar-item w3-button">LAZER CUTTING</a>
+    <a href="3.html" onclick="w3_close()" class="w3-bar-item w3-button">ARDUINO</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
@@ -37,6 +38,18 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>3D Printing</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
+        <p>In this lesson, we printed out the chesspiece I made in Fusion360. The piece can be found <a href="cad.html">here</a>. I exported the chesspiece into an stl file and then used a software called Cura to prepare it for 3D printing.</p>
+        <p><img src="images/cura.jpeg" style="width:100%" alt="cura"></p>
+        <p>Before 3D printing, we need to determine the infill size, wall thickness, whether or not we wanted a raft and supports. As I already had experiences with a 3D printer and knew the basics of what was taught, I filled in the values and sliced the model in Cura. The estimated time for printing the model was about 45 minutes and so I saved it as a gcode file into an SD card. The SD card is then inserted into the 3D printer where the printer will recognise the files inside the card and I could select the file I wanted to print. However, I had spent a lot of time trying to save the file into the SD card as this was my first time having to use an SD card reader as my laptop did not have it. Eventually, I was able to start printing my chesspiece. </p>
+        <p> <img src="images/brim.jpeg" style="width:100%" alt="brim"></p>
+        <p>The 3D printer starting to print out the raft for the piece.</p>
+        <p><img src="images/halfdone.jpeg" style="width:100%" alt="half done"></p>
+        <p>The printer halfway done with the printing.</p>
+        <p><img src="images/almostdone.jpeg" style="width:100%" alt="almost done"></p>
+        <p>The printer almost done with the printing.</p>
+        <p><img src="images/completedhorse.jpeg" style="width:100%" alt="the completed horse"></p>
+        <p>The final product.</p>
+        <p>As you can see, the wall of the chesspiece's base is missing, this is due to me making the wall of it too thin and the printer was unable to print out the wall. I had also learnt that supports are very hard to pull out without damaging the piece, this can be seen at the base of the chesspiece too where it is cut down shorter than it should be.</p>
       </div>
     </div>
   </div>
