--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-row w3-bar-block w3-center" id="projects">
     <h2 class="w3-bar-item w3-row w3-center">What I Did</h2>
     <div class="w3-third">
-    <a href="1.html"><img src="images/1.jpg" style="width:100%" alt="3D printing" ></a>
+    <a href="1.html"><img src="images/completedhorse.jpeg" style="width:100%" alt="3D printing" ></a>
     </div>
     <div class="w3-third">
-    <a href="2.html"><img src="images/1.jpg" style="width:100%" alt="lazer cutting" ></a>
+    <a href="2.html"><img src="images/openbox.jpeg" style="width:100%" alt="lazer cutting" ></a>
     </div>
     <div class="w3-third">
-    <a href="3.html"><img src="images/1.jpg" style="width:100%" alt="Arduino" ></a>
+    <a href="3.html"><img src="images/uno.jpeg" style="width:100%" alt="Arduino" ></a>
     </div>
   </div>
 <p></p>
@@ -79,11 +79,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h1><a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center">What I did</a></h1>
     </div>
     <div class="w3-row w3-bar-block w3-center">
-      <h2><a href="3d.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>3D PRINTING</b></a></h2>
+      <h2><a href="print.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>3D PRINTING</b></a></h2>
     </div>
 
     <div class="w3-row w3-bar-block w3-center">
-      <h2><a href="laser.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>LASER CUTTING</b></a></h2>
+      <h2><a href="cut.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center"><b>LASER CUTTING</b></a></h2>
     </div>
 
     <div class="w3-row w3-bar-block w3-center">
