--- a/print.html
+++ b/print.html
@@ -14,9 +14,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
-    <a href="1.html" onclick="w3_close()" class="w3-bar-item w3-button">3D PRINTING</a>
-    <a href="2.html" onclick="w3_close()" class="w3-bar-item w3-button">LAZER CUTTING</a>
-    <a href="3.html" onclick="w3_close()" class="w3-bar-item w3-button">ARDUINO</a>
+    <a href="print.html" onclick="w3_close()" class="w3-bar-item w3-button">3D PRINTING</a>
+    <a href="cut.html" onclick="w3_close()" class="w3-bar-item w3-button">LAZER CUTTING</a>
+    <a href="code.html" onclick="w3_close()" class="w3-bar-item w3-button">CODING</a>
     &nbsp;
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   </nav>
@@ -35,16 +35,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>Lazer Cutting</b></h4>
+      <h4><b>3D Printing</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
-        <p>In this lesson, I lazer cutted out the music box I made <a href="cad.html">here</a>. First, I exported the faces of the music box into a dxf file, then I added them together in another dxf file to lazer cut.</p>
-        <p> <img src="images/cutting.jpeg" style="width:100%" alt="cutting"></p>
-        <p>This is the completed result.</p>
-        <p> <img src="images/frontbox.jpeg" style="width:100%" alt="front"></p>
-        <p> <img src="images/backbox.jpeg" style="width:100%" alt="back"></p>
-        <p> <img src="images/sidebox.jpeg" style="width:100%" alt="side"></p>
-        <p> <img src="images/openbox.jpeg" style="width:100%" alt="open box"></p>
       </div>
     </div>
   </div>
