updated 2.html and 3.html

--- a/2.html
+++ b/2.html
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Lazer Cutting</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
-        <p>In this lesson, I lazer cutted out the music box I made <a href="cad.html">here</a>. First, I exported the faces of the music box into a dxf file, then I added them together in another dxf file to lazer cut.</p>
+        <p>In this lesson, I lazer cutted out the music box I made <a href="cad.html">here</a>. First, I exported the faces of the music box into a dxf file, then I added them together in another dxf file to lazer cut. I also added some images to cut onto the pieces as design.</p>
         <p> <img src="images/cutting.jpeg" style="width:100%" alt="cutting"></p>
         <p>This is the completed result.</p>
         <p> <img src="images/frontbox.jpeg" style="width:100%" alt="front"></p>
