--- a/3.html
+++ b/3.html
@@ -39,12 +39,15 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
         <p>In these lessons, I first implemented Assignment 12 which I had already made in TinkerCAD and is shown below.</p>
-        <p></p>
+        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/szC1zn_BznQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p>The code is found <a href="arduino.html">here</a></p>
         <p>Then in the next lesson, I was handed an ultrasonic distance sensor. However, I did not take a video of the result and thus only the coding is showed here.</p>
-        <p></p>
+        <p><iframe src=https://create.arduino.cc/editor/imposter_jr/d260022b-95f2-450c-9a66-3f070ab1ff6c/preview?embed style="height:510px;width:100%;margin:10px 0" frameborder=0></iframe></p>
+        <p>I modified Assignment 12 and coded the Ultrasonic distance sensor so that when it detects if something is within 10 to 30cm away from the sensor that I can press the button and it will run Assignment 12. </p>
         <p>After that, I implemented the same circuit but with an LM34 instead of an ultrasonic distance sensor. Both the video of it and the coding is shown below.</p>
-        <p></p>
-        <p></p>
+        <p><iframe src=https://create.arduino.cc/editor/imposter_jr/757e878c-9c8a-4c3f-bd9a-dd1abac33a73/preview?embed style="height:510px;width:100%;margin:10px 0" frameborder=0></iframe></p>
+        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/d9n7BsWb5Rk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <p>For this, I had also modified Assignment 12 so that when the temperature is below 27 degrees celcius, then it will run Assignment 12 but without the use of the pushbutton.</p>
       </div>
     </div>
   </div>
