--- a/1.html
+++ b/1.html
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
         <p>In this lesson, we printed out the chesspiece I made in Fusion360. The piece can be found <a href="cad.html">here</a>. I exported the chesspiece into an stl file and then used a software called Cura to prepare it for 3D printing.</p>
-        <p><img src="images/cura.jpeg" style="width:100%" alt="cura"></p>
+        <p><img src="images/cura.jpg" style="width:100%" alt="cura"></p>
         <p>Before 3D printing, we need to determine the infill size, wall thickness, whether or not we wanted a raft and supports. As I already had experiences with a 3D printer and knew the basics of what was taught, I filled in the values and sliced the model in Cura. The estimated time for printing the model was about 45 minutes and so I saved it as a gcode file into an SD card. The SD card is then inserted into the 3D printer where the printer will recognise the files inside the card and I could select the file I wanted to print. However, I had spent a lot of time trying to save the file into the SD card as this was my first time having to use an SD card reader as my laptop did not have it. Eventually, I was able to start printing my chesspiece. </p>
         <p> <img src="images/brim.jpeg" style="width:100%" alt="brim"></p>
         <p>The 3D printer starting to print out the raft for the piece.</p>
