edited the html for final project

--- a/print.html
+++ b/print.html
@@ -14,6 +14,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
+    <a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I DID</a>
     <a href="print.html" onclick="w3_close()" class="w3-bar-item w3-button">3D PRINTING</a>
     <a href="cut.html" onclick="w3_close()" class="w3-bar-item w3-button">LAZER CUTTING</a>
     <a href="code.html" onclick="w3_close()" class="w3-bar-item w3-button">CODING</a>
@@ -38,6 +39,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>3D Printing</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
+        <p>For this project, only the platform, keypad holder and the keys have to be 3D printed. The models for both are shown below.</p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p>The print for the platforms and keypad holder was great, they fit perfectly into the casing, however the keys had an issue. The keys were too big to fit into the holes cut into the casing, I solved it by making the keys smaller but then found another flaw. The hole to fit the button in was too deep and I could not press the button down. I had remedied that by adding some hot glue into the hole but decided later on to reprint the key but with the keycaps and removing the hole at the bottom, the printed model is the one shown above.</p>
       </div>
     </div>
   </div>
