--- a/code.html
+++ b/code.html
@@ -14,6 +14,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
     <h3 class="w3-padding-64 w3-center"><b>MY PROJECT<br>WEBSITE</b></h3>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">MAIN PAGE</a>
+    <a href="process.html" onclick="w3_close()" class="w3-bar-item w3-button">WHAT I DID</a>
     <a href="print.html" onclick="w3_close()" class="w3-bar-item w3-button">3D PRINTING</a>
     <a href="cut.html" onclick="w3_close()" class="w3-bar-item w3-button">LAZER CUTTING</a>
     <a href="code.html" onclick="w3_close()" class="w3-bar-item w3-button">CODING</a>
@@ -38,6 +39,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h4><b>Coding</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
+        <p>For this project, I was first handed a 4x4 keypad that I could experiment with before implementing the code into my project. I used the LED I used in previous coding projects found <a href="3.html">here</a> and made it so that when I pressed a button, a combination of the LEDs will light up. This allowed me to know that it was working. Initially, I tried implementing it so that when I pressed a pushbutton, it will change to a new set of light combinations which worked initially but could not be controlled like in Assignment 12 found <a href="arduino.html">here</a> and so I decided to remove the button from the project. This is the result of my testing and its code.</p>
+        <p></p>
+        <p></p>
+        <p>After making sure the coding could work, I changed the coding to work with the DFplayer mini. I then changed the audio files in the SD card to some piano keys so that I could play <a href="https://youtu.be/wDgQdr8ZkTw">Megalovania</a></p>. However the sound files were too soft to listen properly even when I adjusted the speaker's volume to 100. I could not find anyway around this but to change the audio files, so I just changed 3 of the buttons to play a portion of a song which will be listed below. The circuit and code is also shown below.</p>
+        <p></p>
+        <p></p>
+        <p>Songs used: </p>
       </div>
     </div>
   </div>
