--- a/process.html
+++ b/process.html
@@ -36,18 +36,31 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <!-- Push down content on small screens -->
     <div class="w3-hide-large" style="margin-top:83px"></div>
     <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-      <h4><b>Lazer Cutting</b></h4>
+      <h4><b>Coding</b></h4>
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
-        <p>For this project, I lazer cutted the casing needed for the project. The box model is shown below.</p>
+        <p>Before the start of this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
+        <p>The proposal is <a href="prj_Janesse.html">here</a></p>
+        <p>After the project was approved, I started designing what I wanted to make on paper.</p>
         <p></p>
-        <p>The cutting of the box itself initially had some problems. First is that the board was not properly pinned down and when I had to cut the piece again as the cut was not deep enought the first round, there left an outline of it that sometimes chipped off. In addition, the hole for the speaker was too small and the holes for the screws did not line up. Thus I redesigned it to the model showned above and lazer cutted it again while being mindful of properly pinning the board down this time. The resulting piece is shown below.</p>
+        <p>After several attempts at trying to make the design's coding work, which can be found <a href="code.html">here</a>, I ultimately decided to remove the button that allows me to toggle between pages as the coding for it was to complicated for me to code. I then designed the box and other parts of it to be made later on in 3D Printing or Lazer Cutting.</p>
         <p></p>
-        <p>After playing around and testing the work, I found that the keys could not properly go onto the button or was just sliding into the box, this was before the addition of keycaps. I fixed this by lazer cutting 2 of these pieces shown below.</p>
+        <p>I then 3D printed out the platform and keys, whose process can be found <a href="print.html">here</a>, and lazer cutted the casing to hold the parts in, whose process can be found <a href="cut.html">here</a>.</p>
+        <p>In the end after some trial and error, this is the finished product.</p>
         <p></p>
-        <p>What it looked like on the inside after the pieces were added on to the top piece.</p>
-        <p></p>
-        <p>These pieces did their job and held the keys in place. The casing was then completed and the project could be assembled now.</p>
+        &nbsp;
+        <p>Extra stuff</p>
+        <ul class="w3-ul">
+          <li class="w3-padding-16 w3-hover-black">
+            <a href="" onclick="w3_close()" class="w3-bar-item">Presentation Slide</a>
+          </li>
+          <li class="w3-padding-16 w3-hover-black">
+            <a href="" onclick="w3_close()" class="w3-bar-item">Presentation Video</a>
+          </li>
+          <li class="w3-padding-16 w3-hover-black">
+            <a href="" onclick="w3_close()" class="w3-bar-item">Ownership Card</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
