--- a/process.html
+++ b/process.html
@@ -51,14 +51,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         &nbsp;
         <p>Extra stuff</p>
         <ul class="w3-ul">
-          <li class="w3-padding-16 w3-hover-black">
-            <a href="" onclick="w3_close()" class="w3-bar-item">Presentation Slide</a>
+          <li class="w3-padding-16">
+            <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Presentation Slide</a>
           </li>
-          <li class="w3-padding-16 w3-hover-black">
-            <a href="" onclick="w3_close()" class="w3-bar-item">Presentation Video</a>
+          <li class="w3-padding-16">
+            <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Presentation Video</a>
           </li>
-          <li class="w3-padding-16 w3-hover-black">
-            <a href="" onclick="w3_close()" class="w3-bar-item">Ownership Card</a>
+          <li class="w3-padding-16">
+            <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Ownership Card</a>
           </li>
         </ul>
       </div>
