--- a/process.html
+++ b/process.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>In the end after some trial and error, this is the finished product.</p>
         <p></p>
         &nbsp;
-        <p>Extra stuff</p>
+        <p class="w3-center"><b>Extra stuff</b></p>
         <ul class="w3-ul">
           <li class="w3-padding-16">
             <a href="" onclick="w3_close()" class="w3-bar-item w3-button">Presentation Slide</a>
