--- a/process.html
+++ b/process.html
@@ -49,7 +49,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>In the end after some trial and error, this is the finished product.</p>
         <p></p>
         &nbsp;
-        <p class="w3-center"><b>Extra stuff</b></p>
+        <p><b>Extra stuff</b></p>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-bar-item">
             <a href="" onclick="w3_close()" class="w3-button w3-center">Presentation Slide</a>
