edited site for project

--- a/cut.html
+++ b/cut.html
@@ -40,13 +40,16 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-content w3-justify" style="max-width:640px">
         <h4>What I did</h4>
         <p>For this project, I lazer cutted the casing needed for the project. The box model is shown below.</p>
-        <p></p>
+        <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd96854d4ea8391e3a976?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p>The cutting of the box itself initially had some problems. First is that the board was not properly pinned down and when I had to cut the piece again as the cut was not deep enought the first round, there left an outline of it that sometimes chipped off. In addition, the hole for the speaker was too small and the holes for the screws did not line up. Thus I redesigned it to the model showned above and lazer cutted it again while being mindful of properly pinning the board down this time. The resulting piece is shown below.</p>
-        <p></p>
+        <p><img src="images/casefront.jpeg" style="width:100%" alt="case front"></p>
+        <p><img src="images/caseside.jpeg" style="width:100%" alt="case side"></p>
+        <p><img src="images/caseback.jpeg" style="width:100%" alt="case back"></p>
+        <p><img src="images/casebottom.jpeg" style="width:100%" alt="case bottom"></p>
         <p>After playing around and testing the work, I found that the keys could not properly go onto the button or was just sliding into the box, this was before the addition of keycaps. I fixed this by lazer cutting 2 of these pieces shown below.</p>
-        <p></p>
+        <p><iframe src="https://ichat1890.autodesk360.com/shares/public/SH56a43QTfd62c1cd968ec2108e6188a3201?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
         <p>What it looked like on the inside after the pieces were added on to the top piece.</p>
-        <p></p>
+        <p><img src="images/pieces.jpeg" style="width:100%" alt="pieces"></p>
         <p>These pieces did their job and held the keys in place. The casing was then completed and the project could be assembled now.</p>
       </div>
     </div>
