--- a/process.html
+++ b/process.html
@@ -42,12 +42,17 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>Before the start of this project, the class was instructed to make a proposal on what we wanted to make and this was extremely important as this allowed me to know what I was supposed to make and made sure I stayed on track.</p>
         <p>The proposal is <a href="prj_Janesse.html">here</a></p>
         <p>After the project was approved, I started designing what I wanted to make on paper.</p>
-        <p></p>
+        <p><img src="images/casebottom.jpeg" style="width:100%" alt="case bottom"></p>
         <p>After several attempts at trying to make the design's coding work, which can be found <a href="code.html">here</a>, I ultimately decided to remove the button that allows me to toggle between pages as the coding for it was to complicated for me to code. I then designed the box and other parts of it to be made later on in 3D Printing or Lazer Cutting.</p>
-        <p></p>
-        <p>I then 3D printed out the platform and keys, whose process can be found <a href="print.html">here</a>, and lazer cutted the casing to hold the parts in, whose process can be found <a href="cut.html">here</a>.</p>
+        <p>I then 3D printed out the platform, keypad holder and keys, whose process can be found <a href="print.html">here</a>, and lazer cutted the casing to hold the parts in, whose process can be found <a href="cut.html">here</a>. I then aseembled the project together.</p>
+        <p>I screwed in the speakers and the keypad holder in place.</p>
+        <p><img src="images/implement2.jpeg" style="width:100%" alt="adding speakers"></p>
+        <p><img src="images/implement1.jpeg" style="width:100%" alt="adding keypad"></p>
+        <p>I then secured the platforms down with some hot glue.</p>
+        <p><img src="images/implement3.jpeg" style="width:100%" alt="adding speakers"></p>
         <p>In the end after some trial and error, this is the finished product.</p>
-        <p></p>
+        <p><img src="images/casebottom.jpeg" style="width:100%" alt="finish front"></p>
+        <p><img src="images/casebottom.jpeg" style="width:100%" alt="finish side"></p>
         &nbsp;
         <p><b>Extra stuff</b></p>
         <p>
